<resources>
    <string name="app_name">SecurityStreet</string>
    <string name="intro_title">Benvenuto in SecurityStreet!</string>
    <string name="intro_button">Entra</string>
    <string name="intro_descirption">L\'app che ti permette di verificare la posizione degli autovelox nella tua zona e il numero di incidenti</string>
    <string name="title_activity_maps">Visualizza mappe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="navigation_drawer_crashes_map">Mappa incidenti</string>
    <string name="navigation_drawer_autovelox_map">Mappa autovelox</string>
    <string name="navigation_drawer_send">Segnala</string>
    <string name="navigation_drawer_notify">Notifiche</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_data_view">DataView</string>

    <string name="default_notification_channel_id">autovelox-notification-channel</string>

    <string name="retry">Riprova</string>

    <string name="main_activity_alert_title">Servizi non attivi</string>
    <string name="main_activity_alert_body">Abbiamo bisogno di rilevare la tua posizione per offrirti un servizio di qualità. Accetta il rilevamento e accendi la connessione dati e/o il GPS.</string>
    <string name="main_activity_exception_toast">Impossibile rilevare la posizione corrente. Attivare la connessione e il GPS</string>
</resources>
